# rio

./: .gitignore  .pre-commit-config.yaml  .prettierrc  README-DEV.md  build_frontend.sh  code_coverage.py  package.json  pyproject.toml  raw_rendering_widgets.py  rio.toml  run.sh  test.py  test_layout.py  testsnip.py  tutorial_counter.py  vite.config.js  vite.config.ts
app_test/: __init__.py
dashboard/: __init__.py
dashboard/pages/: dashboard.py
dev_testing/: __init__.py
examples/: counter_app.py
examples/interactive-plot/: interactive_plot.py
examples/personal_cv/: __init__.py  app.py
frontend/: Icon.ts  ProgressBar.ts  Slider.ts  align.ts  app.js  app.js.map  app.ts  button.ts  classContainer.ts  colorPicker.ts  column.ts  designApplication.ts  design_application.ts  dropdown.ts  easeFunctions.ts  grid.ts  icon.ts  index.html  keyEventListener.ts  linearContainers.ts  link.ts  margin.ts  markdownView.ts  mediaPlayer.ts  models.ts  mouseEventListener.ts  mouse_event_listener.ts  override.ts  placeholder.ts  plot.ts  progressBar.ts  progressCircle.ts  rectangle.ts  revealer.ts  row.ts  scrollContainer.ts  scrollTarget.ts  sizeTripSwitch.ts  slider.ts  slideshow.ts  (+9 more)
frontend/code/: align.ts  app.ts  colorPicker.ts  componentManagement.ts  cssUtils.ts  debugger.ts  debuggerTree.ts  designApplication.ts  drawer.ts  dropdown.ts  eventHandling.ts  grid.ts  icon.ts  image.ts  inputBoxTools.ts  layoutHelpers.ts  layout_helpers.ts  layouting.ts  link.ts  margin.ts  markdownView.ts  mediaPlayer.ts  models.ts  popup.ts  progressCircle.ts  revealer.ts  rpc.ts  rpcFunctions.ts  scrollContainer.ts  scrollTarget.ts  slider.ts  switch.ts  utils.ts  widgetManagement.ts
frontend/css/: fonts.scss  style.scss
gtk_gui/: gtk_gui.py  gtk_test.py
prototyping/: devel.py  icon_search.py  pack.py  test.py
prototyping/chatbot/: rio.toml
prototyping/node_editor/: __main__.py  script.ts  styles.scss
reflex/: __init__.py  app.py  app_server.py  assets.py  box_style.py  color.py  common.py  crawl_tree.py  event.py  event_helpers.py  fills.py  font.py  global_state.py  icon_registry.py  image_source.py  inspection.py  messages.py  self_serializing.py  session.py  styling.py  text_style.py  theme.py  user_settings_module.py  validator.py
reflex/debug/: crawl_tree.py  validator.py
reflex/styling/: __init__.py  box_style.py  color.py  fills.py  markdown_style.py  text_style.py
reflex/widgets/: __init__.py  align.py  auto_form.py  button.py  card.py  class_container.py  color_picker.py  column.py  container.py  custom_button.py  dropdown.py  event_classes.py  fundamentals.py  grid.py  icon.py  image.py  (+31 more)
reflex_docs/: parsers.py
rio/: __init__.py  __main__.py  app.py  app_server.py  assets.py  box_style.py  byte_serving.py  color.py  common.py  dataclass.py  errors.py  event.py  fills.py  font.py  global_state.py  icon_registry.py  inspection.py  maybes.py  route.py  routing.py  self_serializing.py  serialization.py  session.py  state_properties.py  text_style.py  theme.py  user_settings_module.py
rio_docs/: __init__.py  custom.py  models.py  parsers.py
scripts/: benchmark.py  build_frontend.sh  build_material_icon_set.py  check_code_block_in_docs.py  check_docs.py  cloc.sh  code_coverage.py  extract_svgs.py  prepare_docs.py  run_widget_showcase.sh
served/: root.css  root.html  root.js
showcase/: __init__.py  __main__.py
tests/: conftest.py  test_app_build.py  test_custom_components.py  test_custom_widgets.py  test_docstring_code_blocks.py  test_events.py  test_reconciliation.py  test_refresh.py  test_session.py  test_state_bindings.py  test_user_settings.py  test_widget.py  test_zzz_guardrails.py  utils.py
theme_picker/: __init__.py  __main__.py
tools/: build_docs.py  crawl_tree.py  vis.py
tutorial_portfolio/: __init__.py
web_gui/: __init__.py  app.py  assets.py  common.py  messages.py  session.py  styling.py  widgets.py
website/: __init__.py  __main__.py  article.py  article_builder.py  article_models.py  models.py  structure.py  theme.py
(+352 files in other folders)
