[tool.poetry]
name = "reflex-ui"
version = "0.1.2"
description = ""
authors = ["Jakob Pinterits <jakob.pinterits@gmail.com>", "Paul Pinterits"]
readme = "README.md"
packages = [{ include = "reflex" }]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.4"
cefpython3 = { version = "^66.1", platform = "windows", optional = true }
fastapi = "^0.95.1"
introspection = "^1.5.2"
pillow = "^9.5.0"
pygobject = { version = "^3.44.1", platform = "linux", optional = true }
pytest = "^7.3.1"
python-multipart = "^0.0.6"
pywebview = { version = "^4.2.2", optional = true }
timer-dict = "^1.0.0"
typing-extensions = "^4.5.0"
uniserde = "^0.2.5"
uvicorn = "^0.22.0"
websockets = "^11.0.3"

[tool.poetry.extras]
window = ["cefpython3", "pygobject", "pywebview"]


[tool.poetry.group.dev.dependencies]
alt-pytest-asyncio = "^0.7.0"
black = "^23.1.0"
coverage = "^7.2.2"
isort = "^5.12.0"
pre-commit = "^3.1.1"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
