[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "rio-ui"
version = "0.3.0"
description = ""
authors = ["Jakob Pinterits <jakob.pinterits@gmail.com>", "Paul Pinterits"]
readme = "README.md"
packages = [{ include = "rio" }]
include = ["rio/generated/index.html"]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.4"
cefpython3 = { version = "^66.1", platform = "windows", optional = true }
fastapi = "^0.95.1"
introspection = "^1.5.2"
pillow = "^9.5.0"
pygobject = { version = "^3.44.1", platform = "linux", optional = true }
pytest = "^7.3.1"
python-multipart = "^0.0.6"
pywebview = { version = "^4.2.2", optional = true }
timer-dict = "^1.0.0"
typing-extensions = "^4.5.0"
uniserde = "^0.3.8"
uvicorn = { extras = ["standard"], version = "^0.23.2" }
unicall = "^0.1.2"
pandas = { version = "^2.0.3", optional = true }
plotly = { version = "^5.16.1", optional = true }
babel = "^2.12.1"
yarl = "^1.9.2"
revel = "0.7.2"

[tool.poetry.extras]
window = ["cefpython3", "pygobject", "pywebview"]

[tool.poetry.group.dev.dependencies]
alt-pytest-asyncio = "^0.7.0"
black = "^23.1.0"
coverage = "^7.2.2"
isort = "^5.12.0"
pre-commit = "^3.1.1"
pytest = "^7.3.1"
ipykernel = "^6.25.2"

[tool.isort]
profile = "black"
