[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "rio-ui"
version = "0.4.2"
description = ""
authors = ["Jakob Pinterits <jakob.pinterits@gmail.com>", "Paul Pinterits"]
readme = "README.md"
packages = [{ include = "rio" }]
include = ["rio/generated/index.html"]

[tool.poetry.dependencies]
aiofiles = "^23.2.1"
cefpython3 = { version = "^66.1", platform = "windows", optional = true }
fastapi = "^0.95.1"
introspection = "^1.7.9"
pandas = "^2.0.3"
platformdirs = { version = "^3.11.0", optional = true }
pillow = "^9.2.0"
pygobject = { version = "^3.44.1", platform = "linux", optional = true }
pytest = "^7.3.1"
python = "^3.10"
python-multipart = "^0.0.6"
pytz = "^2023.3.post1"
pywebview = { version = "^4.2.2", optional = true }
revel = "0.8.17"
timer-dict = "^1.0.0"
typing-extensions = "^4.5.0"
unicall = "^0.1.3"
uniserde = "^0.3.10"
uvicorn = { extras = ["standard"], version = "^0.23.2" }
yarl = "^1.9.2"
material-color-utilities-python = "^0.1.5"
httpx = "^0.25.1"
watchfiles = "^0.21.0"
gitignore-parser = "^0.1.9"
tomlkit = "^0.12.3"
keyring = "^24.3.0"
fuzzywuzzy = "^0.18.0"
python-levenshtein = "^0.23.0"

[tool.poetry.extras]
window = ["cefpython3", "platformdirs", "pygobject", "pywebview"]

[tool.poetry.group.dev.dependencies]
alt-pytest-asyncio = "^0.7.2"
black = "^23.1.0"
coverage = "^7.2.2"
isort = "^5.12.0"
pre-commit = "^3.1.1"
pyfakefs = "^5.3.0"
pytest = "^7.3.1"
ipykernel = "^6.25.2"

[tool.isort]
profile = "black"

[tool.poetry.scripts]
rio = "rio.__main__:main"
